@@ -13,6 +13,8 @@ cmake_minimum_required(VERSION 2.8)
 
 set (VERSION 1.6.7)
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
+
 add_definitions (-DCMAKE -DVERSION=\"${VERSION}\")
 
 if (WIN32)
