@@ -1,7 +1,4 @@
-include_directories(${mosquitto_SOURCE_DIR} ${mosquitto_SOURCE_DIR}/lib
-			${STDBOOL_H_PATH} ${STDINT_H_PATH} ${PTHREAD_INCLUDE_DIR}
-			${OPENSSL_INCLUDE_DIR})
-link_directories(${mosquitto_BINARY_DIR}/lib)
+FIND_PACKAGE(cJSON)
 
 set(shared_src client_shared.c client_shared.h client_props.c)
 
@@ -9,9 +6,31 @@ if (WITH_SRV)
 	add_definitions("-DWITH_SRV")
 endif (WITH_SRV)
 
+set( CLIENT_INC ${mosquitto_SOURCE_DIR} ${mosquitto_SOURCE_DIR}/lib
+            ${STDBOOL_H_PATH} ${STDINT_H_PATH} ${PTHREAD_INCLUDE_DIR}
+            ${OPENSSL_INCLUDE_DIR})
+
+set( CLIENT_DIR ${mosquitto_BINARY_DIR}/lib)
+
+if (CJSON_FOUND)
+	message(STATUS ${CJSON_FOUND})
+	set( CLIENT_DIR "${CLIENT_DIR} ${CJSON_DIR}" )
+	set( CLIENT_INC "${CLIENT_INC};${CJSON_INCLUDE_DIRS}" )
+	add_definitions("-DWITH_CJSON")
+endif()
+
+include_directories(${CLIENT_INC})
+link_directories(${CLIENT_DIR})
+
 add_executable(mosquitto_pub pub_client.c pub_shared.c ${shared_src})
 add_executable(mosquitto_sub sub_client.c sub_client_output.c ${shared_src})
 add_executable(mosquitto_rr rr_client.c pub_shared.c sub_client_output.c ${shared_src})
+
+if (CJSON_FOUND)
+	target_link_libraries(mosquitto_pub ${CJSON_LIBRARIES})
+	target_link_libraries(mosquitto_sub ${CJSON_LIBRARIES})
+	target_link_libraries(mosquitto_rr ${CJSON_LIBRARIES})
+endif()
 
 if (WITH_STATIC_LIBRARIES)
 	target_link_libraries(mosquitto_pub libmosquitto_static)
